--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "typescript": "^5.6.0",
     "zod": "^3.24.0"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
